--- a/.ci_support/osx_64_python3.10.____cpython.yaml
+++ b/.ci_support/osx_64_python3.10.____cpython.yaml
@@ -2,6 +2,10 @@ MACOSX_DEPLOYMENT_TARGET:
 - '10.13'
 MACOSX_SDK_VERSION:
 - '10.15'
+c_compiler:
+- clang
+c_compiler_version:
+- '19'
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
@@ -14,6 +18,8 @@ cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '19'
+glib:
+- '2'
 harfbuzz:
 - 11.0.1
 macos_machine:
@@ -26,3 +32,8 @@ python:
 - 3.10.* *_cpython
 target_platform:
 - osx-64
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
+zlib:
+- '1'
