--- a/.ci_support/win_64_python3.12.____cpython.yaml
+++ b/.ci_support/win_64_python3.12.____cpython.yaml
@@ -1,3 +1,5 @@
+c_compiler:
+- vs2022
 c_stdlib:
 - vs
 channel_sources:
@@ -6,6 +8,8 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2022
+glib:
+- '2'
 harfbuzz:
 - 11.0.1
 pin_run_as_build:
@@ -16,3 +20,5 @@ python:
 - 3.12.* *_cpython
 target_platform:
 - win-64
+zlib:
+- '1'
